fix(css): Adjust spacing and layout

--- a/css/contact-us/address-and-contact-form-section.css
+++ b/css/contact-us/address-and-contact-form-section.css
@@ -14,7 +14,7 @@
 }
 .address-contact-container .address-div h2 {
   text-transform: uppercase;
-  font-weight: 300;
+  font-weight: 100;
   font-size: 25px;
   letter-spacing: 2px;
   word-spacing: 2px;
